// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Print Queue Item Card Renders Print Queue Item Card with mock print queue item 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "space-evenly",
        "marginRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "fontSize": 16,
          }
        }
      >
        A1-1
      </Text>
      <Text
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        [missing "en.PRINT.small" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "flex": 1,
          }
        }
      >
        [missing "en.PRINT.COPIES" translation]: 1
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "paddingHorizontal": 5,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="pencil"
            size={26}
          />
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "paddingHorizontal": 5,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="trash-can"
            size={26}
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`Test Print Queue Item Card Renders Print Queue Item Card with mock print queue item without size prop 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "space-evenly",
        "marginRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "fontSize": 16,
          }
        }
      >
        A1-1
      </Text>
      <Text
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        [missing "en.PRINT.undefined" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "flex": 1,
          }
        }
      >
        [missing "en.PRINT.COPIES" translation]: 1
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "paddingHorizontal": 5,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="pencil"
            size={26}
          />
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          Object {
            "paddingHorizontal": 5,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <mockConstructor
            color="#545F7A"
            name="trash-can"
            size={26}
          />
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
